# console-quill

./: CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  test.html
.claude/: settings.local.json
console_quill/: __init__.py  server.py
console_quill/static/: console-quill.js
