[project]
name = "console-quill"
version = "0.1.0"
description = "A development tool to capture console.log messages from web pages and log them to a file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
console-quill = "console_quill.server:main"


[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
